<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/miniReproductor"
    android:layout_width="match_parent"
    android:layout_height="68dp"

    android:background="@drawable/bg_mini_player"

    android:gravity="center_vertical"
    android:orientation="horizontal"

    android:paddingStart="10dp"
    android:paddingEnd="8dp">


    <!-- Portada provisional -->

    <FrameLayout
        android:id="@+id/contenedorPortadaMini"
        android:layout_width="48dp"
        android:layout_height="48dp"

        android:background="@color/ds_violet">


        <ImageView
            android:id="@+id/imgPortadaMini"
            android:layout_width="28dp"
            android:layout_height="28dp"

            android:layout_gravity="center"

            android:contentDescription="@null"

            app:srcCompat="@android:drawable/ic_media_play"
            app:tint="@color/ds_text_primary" />

    </FrameLayout>


    <!-- Información de la canción -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="12dp"
        android:layout_weight="1"

        android:orientation="vertical">


        <TextView
            android:id="@+id/tvCancionMini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ellipsize="end"
            android:maxLines="1"

            android:text="@string/nothing_playing"
            android:textColor="@color/ds_text_primary"
            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvArtistaMini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="2dp"

            android:ellipsize="end"
            android:maxLines="1"

            android:text="@string/select_song"
            android:textColor="@color/ds_text_secondary"
            android:textSize="12sp" />

    </LinearLayout>


    <!-- Botón reproducir -->

    <ImageButton
        android:id="@+id/btnPlayMini"
        android:layout_width="48dp"
        android:layout_height="48dp"

        android:background="@android:color/transparent"

        android:contentDescription="@string/play"

        android:padding="12dp"

        app:srcCompat="@android:drawable/ic_media_play"
        app:tint="@color/ds_text_primary" />

</LinearLayout>